--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "nuxt": "^4.3.1",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@iconify-json/lucide": "^1.2.94"
   }
 }
